# RunnerPilot

./: API-DOC.md  Makefile  README.md  docker-compose.yml  runner-pilot.sh  runnerpillot-cli.sh  runnerpillot.code-workspace
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  TODO.md  compose.yml  docker-compose.yml  main.py  pyproject.toml
backend/app/: backend_pre_start.py  main.py
backend/app/admin/: __init__.py  auth.py  setup.py  views.py
backend/app/alembic/: env.py
backend/app/api/: main.py
backend/app/core/: config.py  db.py  logging.py
backend/app/crud/: __init__.py  base.py  department.py  designation.py  employee.py  monitoring.py  node.py  org_user.py  organization.py  runner.py  runner_instance.py  user.py
backend/app/middlewares/: AuthMiddleware.py
backend/app/models/: __init__.py  common.py  monitoring.py  node.py  org_user.py  organization.py  runner.py  runner_instance.py  user.py
backend/app/tests/: conftest.py  conftest_logging.py
backend/app/utils/: core.py
backend/inc/: auth.py  config.py  db.py
backend/inc/helpers/: model.py  release_helpers.py
backend/inc/utils/: meta.py  prerequisites.py  (+3 more)
backend/logs/: .gitignore
backend/models/: __init__.py  meta.py  runner_instance.py  user.py
backend/pipeline-dependency/: Dockerfile
backend/routers/: auth.py  common.py  meta.py  prerequisites.py  runner_instance.py  runners_release.py  system.py  users.py
backend/scripts/: initialdb-loader.py  run_tests_with_logging.py  wipedb.py
backend/volumn/: .gitignore  jokes.json  runner-release.json
(+92 files in other folders)
